# core

./: README.md  clean.sh  make.sh  push.sh
action/: CMakeLists.txt  make_ios.sh
action/include/action/: action.h  action_ease.h  action_lerp.h  action_parallel.h  action_sequence.h  ease.h  manager.h
action/src/: action.c  action_ease.c  action_lerp.c  ease.c  manager.c  parallel.c  sequence.c
action/test/: main.c
collada/: CMakeLists.txt  make_ios.sh
collada/include/collada/: amature.h  bone.h  context.h  float_array.h  geometry.h  int_array.h  node.h  skin.h
collada/res/: cube.dae  test.dae
collada/src/: amature.c  bone.c  float_array.c  geometry.c  int_array.c  node.c  skin.c
collada/src/context/: context.c  parse.c
collada/test/: main.c
cups/: CMakeLists.txt  make_droid.sh  make_ios.sh
cups/include/cups/: config.h  string-private.h
cups/src/: array.c  auth.c  debug.c  dest-job.c  dest-localization.c  dest-options.c  dest.c  dir.c  encode.c  file.c  getputfile.c  globals.c  hash.c  http-addr.c  http-addrlist.c  http-support.c  http.c  ipp-file.c  ipp-support.c  ipp-vars.c  ipp.c  langprintf.c  language.c  md5.c  md5passwd.c  notify.c  options.c  pwg-media.c  request.c  snprintf.c  string.c  tempfile.c  thread.c  tls-darwin.c  tls-gnutls.c  tls-sspi.c  tls.c  transcode.c  usersys.c  util.c
cups/test/: main.c
gui/: CMakeLists.txt  make_droid.sh  make_ios.sh
gui/include/gui/: grid.h  gui_layout.h  point.h
gui/res/: font.vs  text  text2  ttt.tex
gui/src/: point.c
gui/test/: main.c
haru/: CMakeLists.txt  make_ios.sh
haru/include/haru/: hpdf.h  hpdf_3dmeasure.h  hpdf_annotation.h  hpdf_catalog.h  hpdf_config.h  hpdf_destination.h  hpdf_doc.h  hpdf_encoder.h  hpdf_encrypt.h  hpdf_encryptdict.h  hpdf_error.h  hpdf_exdata.h  hpdf_ext_gstate.h  hpdf_font.h  hpdf_fontdef.h  hpdf_gstate.h  hpdf_image.h  hpdf_info.h  hpdf_list.h  hpdf_mmgr.h  hpdf_namedict.h  hpdf_objects.h  hpdf_outline.h  hpdf_page_label.h  hpdf_pages.h  hpdf_pdfa.h  hpdf_streams.h  hpdf_u3d.h  hpdf_utils.h
haru/res/: text
haru/src/: hpdf_3dmeasure.c  hpdf_annotation.c  hpdf_array.c  hpdf_binary.c  hpdf_boolean.c  hpdf_catalog.c  hpdf_destination.c  hpdf_dict.c  hpdf_doc.c  hpdf_doc_png.c  hpdf_encoder.c  hpdf_encoder_cns.c  hpdf_encoder_cnt.c  hpdf_encoder_jp.c  hpdf_encoder_kr.c  hpdf_encoder_utf.c  hpdf_encrypt.c  hpdf_encryptdict.c  hpdf_error.c  hpdf_exdata.c  hpdf_ext_gstate.c  hpdf_font.c  hpdf_font_cid.c  hpdf_font_tt.c  hpdf_font_type1.c  hpdf_fontdef.c  hpdf_fontdef_base14.c  hpdf_fontdef_cid.c  hpdf_fontdef_cns.c  hpdf_fontdef_cnt.c  hpdf_fontdef_jp.c  hpdf_fontdef_kr.c  hpdf_fontdef_tt.c  hpdf_fontdef_type1.c  hpdf_gstate.c  hpdf_image.c  hpdf_image_ccitt.c  hpdf_image_png.c  hpdf_info.c  hpdf_list.c  (+17 more)
haru/test/: main.c
jpeg/src/: jdmaster.c
json/: CMakeLists.txt  make_ios.sh
json/include/json/: json.h
json/res/: test.json
json/src/: export.c  parse_buffer.c  type_array.c  type_boolean.c  type_map.c  type_node.c  type_number.c  type_string.c
json/test/: main.c
kernel/: CMakeLists.txt  make_ios.sh
kernel/include/kernel/: array.h  bits.h  def.h  hash_table.h  io.h  jni.h  list.h  number.h  platform.h  pool_list.h  ref.h  string.h  thread.h  utf8.h
kernel/res/: test.xml
kernel/src/: array.c  bits.c  hash_table.c  jni.c  number.c  string.c  utf8.c
kernel/src/io/: io.c  io_droid.c  io_ios.m  io_pc.c  io_web.c
kernel/src/thread/: pthread.c
kernel/test/: main.c
math/: CMakeLists.txt  make_ios.sh
math/include/math/: mat3.h  mat4.h  math.h  quat.h  vec2.h  vec3.h  vec4.h
math/src/: math.c
math/test/: main.c
opengl/: CMakeLists.txt  make_ios.sh  make_web.sh
opengl/include/opengl/: buffer.h  config.h  device.h  image.h  pass.h  shader.h  texture.h
opengl/res/: g_buffer.fs  g_buffer.vs  test.fs  test.vs  texture.fs  texture.vs
opengl/src/: device.c  image.c  shader.c  texture.c  vao.c  vbo.c
opengl/src/pass/: pass.c  pass_main.c  pass_texture.c  pass_texture_msaa.c
opengl/src/pass/droid/: pass_texture_droid.c
opengl/src/pass/ios/: pass_texture_ios.c
opengl/src/pass/linux/: pass_texture_linux.c
opengl/src/pass/osx/: pass_texture_osx.c
opengl/src/pass/web/: pass_texture_web.c
opengl/test/: main.c
physics/: CMakeLists.txt  make_ios.sh
physics/include/physics/: particle.h  pfgen.h
physics/src/: particle.c
png/: CMakeLists.txt
xml/: CMakeLists.txt  make_ios.sh
xml/include/xml/: xml.h
xml/res/: test.xml
xml/src/: attribute.c  context.c  node.c
xml/test/: main.c
